<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/instaicon"
            android:title="@string/navigation_home"
            tools:ignore="HardcodedText" />


        <item
            android:id="@+id/webite1"
            android:icon="@drawable/websiteicon"
            android:title="@string/navigation_website"
            tools:ignore="HardcodedText" />



        <item
            android:id="@+id/map"
            android:icon="@drawable/mapicon"
            android:title="@string/navigation_maplocation"
            tools:ignore="HardcodedText" />


    </group>

    <item android:title="Communicate">
        <menu>



            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/navigation_shaer"
                tools:ignore="HardcodedText" />
            <item
                android:id="@+id/designby"
                android:icon="@drawable/drsignby"
                android:title="@string/navigation_designby"
                tools:ignore="HardcodedText" />
        </menu>
    </item>

</menu>
